# min-cc

./: Min-CC.md  README.md  pyproject.toml
src/min_cc/: __init__.py  agent.py  cli.py  compaction.py  constants.py  models.py  tools.py  utils.py
src/min_cc/cli/: __init__.py  completer.py  style.py
src/min_cc/cli/commands/: __init__.py  base.py  clear.py  exit.py  help.py  init.py
tests/: test_agent_integration.py  test_compaction.py  test_tools.py
